--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,15 @@ body {
       text-decoration: underline;
       cursor: pointer; }
   body main {
-    background-color: skyblue;
+    background-color: #ddd;
     padding: 4em 2em;
     display: grid;
     align-items: center;
     gap: 1.5em;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
     body main article {
-      border: 1px solid red;
       background-color: orange;
+      border-radius: 10px;
       height: 350px;
       position: relative; }
       body main article .project-item {
@@ -48,20 +48,24 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        background-color: blue;
-        height: 100%; }
+        background-color: #fff000;
+        height: 100%;
+        border-radius: 10px;
+        border: 1px solid #000;
+        box-shadow: 0 0 10px #000a;
+        overflow: hidden; }
         body main article .project-item h4 {
           font-size: 2em;
-          background-color: green;
-          width: 100%;
           text-align: center;
-          padding: .4em; }
+          padding: .4em;
+          color: #141414; }
         body main article .project-item a {
           background-color: red;
           width: 100%;
           overflow: hidden; }
         body main article .project-item img {
-          width: 100%; }
+          width: 100%;
+          transition: .2s ease; }
         body main article .project-item:hover img {
           transition: .2s ease;
           transform: scale(1.05); }
