--- a/style.scss
+++ b/style.scss
@@ -46,15 +46,15 @@ body {
     }
 
     main {
-        background-color: skyblue;
+        background-color: #ddd;
         padding: 4em 2em;
         display: grid;
         align-items: center;
         gap: 1.5em;
         grid-template-columns: repeat( auto-fit, minmax(300px, 1fr));
         article {
-            border: 1px solid red;
             background-color: orange;
+            border-radius: 10px;
             height: 350px;
             position: relative;
             
@@ -63,27 +63,35 @@ body {
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-between;
-                background-color: blue;
+                background-color: #fff000;
                 height: 100%;
+                border-radius: 10px;
+                border: 1px solid #000;
+                box-shadow: 0 0 10px #000a;
+                overflow: hidden;
                 
                 h4 {
                     font-size: 2em;
-                    background-color: green;
-                    width: 100%;
                     text-align: center;
                     padding: .4em;
+                    color: #141414;
                 }
                 
                 a {
                     background-color: red;
                     width: 100%;
+
+                    // border-bottom-right-radius: 10px;
+                    // border-bottom-left-radius: 10px;
                     overflow: hidden;
                 }
 
                 img {
                     width: 100%;
-
+                    transition: .2s ease;
+                    
                 }
+
                 &:hover {
                     img {
                         transition: .2s ease;
