--- a/style.scss
+++ b/style.scss
@@ -101,4 +101,12 @@ body {
             }
         }
     }
+
+    footer {
+        padding: .5em;
+        font-size: 1.2em;
+        color: #141414;
+        text-transform: capitalize;
+        text-align: center;
+    }
 }
