--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #eee; }
+  background-color: #eee;
+  font-family: 'Montserrat', sans-serif; }
   body header {
     background-color: #161616;
     width: 100%;
@@ -14,8 +15,9 @@ body {
       color: #fff000;
       text-transform: capitalize;
       letter-spacing: .1em;
-      font-size: 3em;
-      font-family: sans-serif; }
+      font-size: 4em;
+      font-family: 'Gruppo', cursive;
+      font-weight: 700; }
       @media (max-width: 768px) {
         body header h1 {
           font-size: 2.5em; } }
@@ -37,7 +39,7 @@ body {
     display: grid;
     align-items: center;
     gap: 1.5em;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
     body main article {
       background-color: orange;
       border-radius: 10px;
@@ -55,20 +57,31 @@ body {
         box-shadow: 0 0 10px #000a;
         overflow: hidden; }
         body main article .project-item h4 {
-          font-size: 2em;
+          font-size: 1.6em;
           text-align: center;
           padding: .4em;
-          color: #141414; }
+          color: #141414;
+          text-transform: capitalize;
+          transition: .2s ease;
+          font-family: 'Gruppo', cursive; }
+          @media (max-width: 768px) {
+            body main article .project-item h4 {
+              font-size: 1.3em; } }
         body main article .project-item a {
           background-color: red;
           width: 100%;
           overflow: hidden; }
         body main article .project-item img {
           width: 100%;
+          height: 100%;
+          object-fit: cover;
           transition: .2s ease; }
         body main article .project-item:hover img {
           transition: .2s ease;
           transform: scale(1.05); }
+        body main article .project-item:hover h4 {
+          transition: .2s ease;
+          letter-spacing: .1em; }
   body footer {
     padding: .5em;
     font-size: 1.2em;
