--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 }
 body {
     background-color: #eee;
+    font-family: 'Montserrat', sans-serif;
 
     header {
         background-color: #161616;
@@ -17,8 +18,9 @@ body {
             color: #fff000;
             text-transform: capitalize;
             letter-spacing: .1em;
-            font-size: 3em;
-            font-family: sans-serif;
+            font-size: 4em;
+            font-family: 'Gruppo', cursive;
+            font-weight: 700;
 
             @media(max-width: 768px){
                 font-size: 2.5em;
@@ -51,7 +53,7 @@ body {
         display: grid;
         align-items: center;
         gap: 1.5em;
-        grid-template-columns: repeat( auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
         article {
             background-color: orange;
             border-radius: 10px;
@@ -71,10 +73,16 @@ body {
                 overflow: hidden;
                 
                 h4 {
-                    font-size: 2em;
+                    @media(max-width: 768px){
+                        font-size: 1.3em;
+                    }
+                    font-size: 1.6em;
                     text-align: center;
                     padding: .4em;
                     color: #141414;
+                    text-transform: capitalize;
+                    transition: .2s ease;
+                    font-family: 'Gruppo', cursive;
                 }
                 
                 a {
@@ -88,6 +96,8 @@ body {
 
                 img {
                     width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                     transition: .2s ease;
                     
                 }
@@ -96,6 +106,10 @@ body {
                     img {
                         transition: .2s ease;
                         transform: scale(1.05);
+                    }
+                    h4 {
+                        transition: .2s ease;
+                        letter-spacing: .1em;
                     }
                 }
             }
