--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
 
 body {
   background-color: #eee;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: "Gruppo", cursive; }
   body header {
     background-color: #161616;
     width: 100%;
@@ -16,23 +17,45 @@ body {
       text-transform: capitalize;
       letter-spacing: .1em;
       font-size: 4em;
-      font-family: 'Gruppo', cursive;
-      font-weight: 700; }
+      font-weight: 800; }
       @media (max-width: 768px) {
         body header h1 {
-          font-size: 2.5em; } }
+          font-size: 3em; } }
   body section {
     background-color: #e7d803;
     padding: 2em;
-    text-align: center;
-    font-family: sans-serif; }
+    text-align: center; }
     body section h3 {
       margin: 1em auto;
       font-size: 1.8em;
-      color: #000; }
-    body section p {
-      text-decoration: underline;
-      cursor: pointer; }
+      width: 50vw;
+      font-weight: 700;
+      color: #fff000;
+      background: #141414;
+      padding: .3em 1em;
+      margin-bottom: 1em;
+      border-radius: 5px;
+      text-transform: capitalize; }
+    body section a {
+      display: inline-block;
+      text-decoration: none;
+      cursor: pointer;
+      font-size: 1.2em;
+      color: #000;
+      padding: .4em 1em;
+      font-weight: 600;
+      border-radius: 5px;
+      box-shadow: 0 0 5px #000a, inset -4px -4px 5px #000, inset 4px 4px 5px #ddda;
+      transition: .2s ease; }
+      body section a:hover {
+        transition: .2s ease;
+        transform: scale(0.97);
+        box-shadow: 0 0 10px #000a, inset -2px -2px 5px #000, inset 2px 2px 5px #ddda; }
+    @media (max-width: 500px) {
+      body section h3 {
+        font-size: 1em; }
+      body section a {
+        font-size: 1em; } }
   body main {
     background-color: #ddd;
     padding: 4em 2em;
@@ -63,13 +86,18 @@ body {
           color: #141414;
           text-transform: capitalize;
           transition: .2s ease;
-          font-family: 'Gruppo', cursive; }
+          font-family: 'Gruppo', cursive;
+          z-index: 20;
+          background: #fff000;
+          width: 100%;
+          box-shadow: inset -3px -3px 5px #ddda, inset 3px 3px 5px #000a; }
           @media (max-width: 768px) {
             body main article .project-item h4 {
               font-size: 1.3em; } }
         body main article .project-item a {
-          background-color: red;
+          background-color: #ddd;
           width: 100%;
+          height: 100%;
           overflow: hidden; }
         body main article .project-item img {
           width: 100%;
@@ -81,10 +109,16 @@ body {
           transform: scale(1.05); }
         body main article .project-item:hover h4 {
           transition: .2s ease;
-          letter-spacing: .1em; }
+          letter-spacing: .1em;
+          transform: translateY(0.5em);
+          margin-bottom: 1em;
+          box-shadow: inset -3px -3px 5px #000a, inset 3px 3px 5px #ddda; }
   body footer {
     padding: .5em;
     font-size: 1.2em;
     color: #141414;
     text-transform: capitalize;
     text-align: center; }
+    @media (max-width: 768px) {
+      body footer {
+        font-size: .8em; } }
