--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,14 @@
+@import 'variables';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 body {
     background-color: #eee;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-gruppo;
 
     header {
         background-color: #161616;
@@ -19,11 +21,10 @@ body {
             text-transform: capitalize;
             letter-spacing: .1em;
             font-size: 4em;
-            font-family: 'Gruppo', cursive;
-            font-weight: 700;
+            font-weight: 800;
 
             @media(max-width: 768px){
-                font-size: 2.5em;
+                font-size: 3em;
             }
         }
     }
@@ -32,18 +33,50 @@ body {
         background-color: #e7d803;
         padding: 2em;
         text-align: center;
-        font-family: sans-serif;
 
 
         h3 {
             margin: 1em auto;
             font-size: 1.8em;
-            color: #000;
+            width: 50vw;
+            font-weight: 700;
+            color: #fff000;
+            background: #141414;
+            padding: .3em 1em;
+            margin-bottom: 1em;
+            border-radius: 5px;
+            text-transform: capitalize;
         }
 
-        p {
-            text-decoration: underline;
+        a {
+            display: inline-block;
+            text-decoration: none;
             cursor: pointer;
+            font-size: 1.2em;
+            color: #000;
+            padding: .4em 1em;
+            font-weight: 600;
+            border-radius: 5px;
+            box-shadow: 0 0 5px #000a,
+                        inset -4px -4px 5px #000,
+                        inset 4px 4px 5px #ddda; 
+            transition: .2s ease;
+
+            &:hover {
+                transition: .2s ease;
+                transform: scale(.97);
+                box-shadow: 0 0 10px #000a,
+                        inset -2px -2px 5px #000,
+                        inset 2px 2px 5px #ddda;
+            }
+        }
+        @media (max-width: 500px) {
+            h3 {
+                font-size: 1em;
+            }
+            a {
+                font-size: 1em;
+            }
         }
     }
 
@@ -82,12 +115,18 @@ body {
                     color: #141414;
                     text-transform: capitalize;
                     transition: .2s ease;
-                    font-family: 'Gruppo', cursive;
+                font-family: 'Gruppo', cursive;
+                z-index: 20;
+                background: #fff000;
+                width: 100%;
+                box-shadow: inset -3px -3px 5px #ddda,
+                            inset 3px 3px 5px #000a;
                 }
                 
                 a {
-                    background-color: red;
+                    background-color: #ddd;
                     width: 100%;
+                    height: 100%;
 
                     // border-bottom-right-radius: 10px;
                     // border-bottom-left-radius: 10px;
@@ -110,6 +149,10 @@ body {
                     h4 {
                         transition: .2s ease;
                         letter-spacing: .1em;
+                        transform: translateY(.5em);
+                        margin-bottom: 1em;
+                        box-shadow: inset -3px -3px 5px #000a,
+                            inset 3px 3px 5px #ddda;
                     }
                 }
             }
@@ -122,5 +165,9 @@ body {
         color: #141414;
         text-transform: capitalize;
         text-align: center;
+
+        @media (max-width: 768px) {
+            font-size: .8em;
+        }
     }
 }
