--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body {
         box-shadow: 0 0 10px #000a, inset -2px -2px 5px #000, inset 2px 2px 5px #ddda; }
     @media (max-width: 500px) {
       body section h3 {
-        font-size: 1em; }
+        font-size: 1.4em;
+        padding: .1em; }
       body section a {
         font-size: 1em; } }
   body main {
