--- a/style.scss
+++ b/style.scss
@@ -72,7 +72,8 @@ body {
         }
         @media (max-width: 500px) {
             h3 {
-                font-size: 1em;
+                font-size: 1.4em;
+                padding: .1em;
             }
             a {
                 font-size: 1em;
