--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,27 @@
   scroll-behavior: smooth; }
 
 body {
-  background-color: #eee;
+  background-color: #f4f4f4;
   font-family: "Gruppo", cursive; }
   body header {
     background-color: #161616;
     width: 100%;
     text-align: center;
-    padding: 3em; }
+    padding: 3em .5em; }
     body header h1 {
       color: #fff000;
       text-transform: capitalize;
       letter-spacing: .1em;
       font-size: 4em;
-      font-weight: 800; }
+      font-weight: 800;
+      padding: .2em;
+      width: 90%;
+      margin: 0 auto;
+      border-radius: 5px;
+      box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445), inset -4px -4px 20px rgba(46, 46, 46, 0.667); }
       @media (max-width: 768px) {
         body header h1 {
-          font-size: 3em; } }
+          font-size: 2.5em; } }
   body section {
     background-color: #e7d803;
     padding: 2em;
@@ -54,7 +59,8 @@ body {
     @media (max-width: 500px) {
       body section h3 {
         font-size: 1.4em;
-        padding: .1em; }
+        padding: .5em .5em;
+        width: 100%; }
       body section a {
         font-size: 1em; } }
   body main {
@@ -99,21 +105,35 @@ body {
           background-color: #ddd;
           width: 100%;
           height: 100%;
-          overflow: hidden; }
+          overflow: hidden;
+          position: relative; }
+          body main article .project-item a::after {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(0deg, #ffee00a1, #000); }
         body main article .project-item img {
           width: 100%;
           height: 100%;
           object-fit: cover;
           transition: .2s ease; }
+        body main article .project-item:hover a::after {
+          transition: .5s ease;
+          opacity: 0; }
         body main article .project-item:hover img {
           transition: .2s ease;
           transform: scale(1.05); }
         body main article .project-item:hover h4 {
-          transition: .2s ease;
+          transition: .3s ease;
           letter-spacing: .1em;
           transform: translateY(0.5em);
           margin-bottom: 1em;
-          box-shadow: inset -3px -3px 5px #000a, inset 3px 3px 5px #ddda; }
+          background: #000;
+          color: #fff000;
+          box-shadow: inset -3px -3px 5px rgba(0, 0, 0, 0.356), inset 3px 3px 5px #ddda; }
   body footer {
     padding: .5em;
     font-size: 1.2em;
