--- a/style.scss
+++ b/style.scss
@@ -7,14 +7,14 @@
     scroll-behavior: smooth;
 }
 body {
-    background-color: #eee;
+    background-color: #f4f4f4;
     font-family: $font-gruppo;
 
     header {
         background-color: #161616;
         width: 100%;
         text-align: center;
-        padding: 3em;
+        padding: 3em .5em;
 
         h1 {
             color: #fff000;
@@ -22,9 +22,15 @@ body {
             letter-spacing: .1em;
             font-size: 4em;
             font-weight: 800;
+            padding: .2em;
+            width: 90%;
+            margin: 0 auto;
+            border-radius: 5px;
+            box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445),
+                        inset -4px -4px 20px rgba(46, 46, 46, 0.667);
 
             @media(max-width: 768px){
-                font-size: 3em;
+                font-size: 2.5em;
             }
         }
     }
@@ -73,7 +79,8 @@ body {
         @media (max-width: 500px) {
             h3 {
                 font-size: 1.4em;
-                padding: .1em;
+                padding: .5em .5em;
+                width: 100%;
             }
             a {
                 font-size: 1em;
@@ -116,11 +123,11 @@ body {
                     color: #141414;
                     text-transform: capitalize;
                     transition: .2s ease;
-                font-family: 'Gruppo', cursive;
-                z-index: 20;
-                background: #fff000;
-                width: 100%;
-                box-shadow: inset -3px -3px 5px #ddda,
+                    font-family: 'Gruppo', cursive;
+                    z-index: 20;
+                    background: #fff000;
+                    width: 100%;
+                    box-shadow: inset -3px -3px 5px #ddda,
                             inset 3px 3px 5px #000a;
                 }
                 
@@ -132,6 +139,18 @@ body {
                     // border-bottom-right-radius: 10px;
                     // border-bottom-left-radius: 10px;
                     overflow: hidden;
+                    position: relative;
+
+                    &::after {
+                        position: absolute;
+                        content: '';
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-image: linear-gradient(0deg, #ffee00a1, #000);
+                        
+                    }
                 }
 
                 img {
@@ -139,20 +158,27 @@ body {
                     height: 100%;
                     object-fit: cover;
                     transition: .2s ease;
-                    
                 }
 
                 &:hover {
+                    a {
+                        &::after {
+                            transition: .5s ease;
+                            opacity: 0;
+                        }
+                    }
                     img {
                         transition: .2s ease;
                         transform: scale(1.05);
                     }
                     h4 {
-                        transition: .2s ease;
+                        transition: .3s ease;
                         letter-spacing: .1em;
                         transform: translateY(.5em);
                         margin-bottom: 1em;
-                        box-shadow: inset -3px -3px 5px #000a,
+                        background: #000;
+                        color: #fff000;
+                        box-shadow: inset -3px -3px 5px rgba(0, 0, 0, 0.356),
                             inset 3px 3px 5px #ddda;
                     }
                 }
