--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
         border-radius: 10px;
         border: 1px solid #000;
         box-shadow: 0 0 10px #000a;
+        transition: .4s ease;
         overflow: hidden; }
         body main article .project-item h4 {
           font-size: 1.6em;
