--- a/style.scss
+++ b/style.scss
@@ -114,6 +114,7 @@ body {
                 border-radius: 10px;
                 border: 1px solid #000;
                 box-shadow: 0 0 10px #000a;
+                transition: .4s ease;
                 overflow: hidden;
                 
                 h4 {
