--- a/style.scss
+++ b/style.scss
@@ -9,12 +9,13 @@
 body {
     background-color: #f4f4f4;
     font-family: $font-gruppo;
-
+    width: 100vw;
+    overflow-x: hidden;
     header {
         background-color: #161616;
         width: 100%;
         text-align: center;
-        padding: 3em .5em;
+        padding: 3em 5vw;
 
         h1 {
             color: #fff000;
@@ -22,9 +23,8 @@ body {
             letter-spacing: .1em;
             font-size: 4em;
             font-weight: 800;
-            padding: .2em;
-            width: 90%;
-            margin: 0 auto;
+            padding: .1em;
+            width: 100%;
             border-radius: 5px;
             box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445),
                         inset -4px -4px 20px rgba(46, 46, 46, 0.667);
@@ -93,7 +93,7 @@ body {
 
     main {
         background-color: #ddd;
-        padding: 4em 2em;
+        padding: 4em 5vw;
         display: grid;
         align-items: center;
         gap: 1.5em;
@@ -115,6 +115,7 @@ body {
                 border: 1px solid #000;
                 box-shadow: 0 0 10px #000a;
                 transition: .4s ease;
+                cursor: pointer;
                 overflow: hidden;
                 
                 h4 {
