--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,15 @@
 body {
   background-color: #f4f4f4;
   font-family: "Gruppo", cursive;
-  width: 100vw;
-  overflow-x: hidden; }
+  width: 100vw; }
   body header {
     background-color: #161616;
     width: 100%;
     text-align: center;
     padding: 3em 5vw; }
+    @media (max-width: 768px) {
+      body header {
+        height: 30vh; } }
     body header h1 {
       color: #fff000;
       text-transform: capitalize;
@@ -28,18 +30,25 @@ body {
         body header h1 {
           font-size: 2.5em; } }
   body section {
-    background-color: #e7d803;
-    padding: 2em;
+    height: 70vh;
+    width: 100vw;
+    background-image: url(../img/js.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom left;
+    background-color: #F7E018;
+    padding: 5vh 5vw;
     text-align: center; }
+    @media (min-width: 1025px) {
+      body section {
+        background-position: right; } }
     body section h3 {
-      margin: 1em auto;
       font-size: 1.8em;
-      width: 50vw;
+      width: 100%;
       font-weight: 700;
       color: #fff000;
       background: #141414;
       padding: .3em 1em;
-      margin-bottom: 1em;
       border-radius: 5px;
       text-transform: capitalize;
       box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445), inset -4px -4px 10px rgba(0, 0, 0, 0.667), 10px 10px 10px #000a; }
@@ -50,6 +59,7 @@ body {
       font-size: 1.2em;
       color: #000;
       padding: .4em 1em;
+      margin: 5vh auto;
       font-weight: 600;
       border-radius: 5px;
       box-shadow: 0 0 5px #000a, inset -3px -3px 5px #000, inset 4px 4px 5px #ddda;
