--- a/css/style.css
+++ b/css/style.css
@@ -154,11 +154,16 @@ body {
             color: #fff000;
             box-shadow: inset -3px -3px 5px rgba(0, 0, 0, 0.356), inset 3px 3px 5px #ddda; }
   body footer {
-    padding: .5em;
-    font-size: 1.2em;
-    color: #141414;
+    padding: 5vh 0;
+    font-size: 1.5em;
+    color: #fff;
+    background-color: #000;
+    font-weight: 500;
     text-transform: capitalize;
     text-align: center; }
+    body footer a {
+      color: #fff000;
+      text-decoration: none; }
     @media (max-width: 768px) {
       body footer {
         font-size: .8em; } }
