--- a/style.scss
+++ b/style.scss
@@ -222,12 +222,17 @@ body {
     }
 
     footer {
-        padding: .5em;
-        font-size: 1.2em;
-        color: #141414;
+        padding: 5vh 0;
+        font-size: 1.5em;
+        color: #fff;
+        background-color: #000;
+        font-weight: 500;
         text-transform: capitalize;
         text-align: center;
-
+        a {
+            color: #fff000;
+            text-decoration: none;
+        }
         @media (max-width: 768px) {
             font-size: .8em;
         }
