--- a/css/style.css
+++ b/css/style.css
@@ -15,30 +15,46 @@ body header {
   background-color: #161616;
   width: 100%;
   text-align: center;
-  padding: 3em 5vw;
+  padding: 1rem 5vw;
+  height: 30vh;
 }
 @media (max-width: 768px) {
   body header {
     height: 30vh;
+    display: grid;
+    place-items: center;
   }
 }
 body header h1 {
   color: #fff000;
   text-transform: capitalize;
   letter-spacing: 0.1em;
-  font-size: 4em;
+  font-size: 3rem;
   font-weight: 800;
   padding: 0.1em;
   width: 100%;
   border-radius: 5px;
-  box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445), inset -4px -4px 20px rgba(46, 46, 46, 0.667);
 }
 @media (max-width: 768px) {
   body header h1 {
-    font-size: 2.5em;
+    font-size: 1.8rem;
+    width: 100%;
   }
 }
-body section {
+body header h2 {
+  margin: 1em auto;
+  padding: 1rem;
+  font-size: 1.5rem;
+  width: max-content;
+  width: 20rem;
+  font-weight: 700;
+  color: #000;
+  background: #fff000;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  text-transform: capitalize;
+}
+body .hero {
   height: 70vh;
   width: 100vw;
   background-image: url(../img/js.png);
@@ -50,47 +66,39 @@ body section {
   text-align: center;
 }
 @media (min-width: 1025px) {
-  body section {
+  body .hero {
     background-position: right;
   }
 }
-body section h2 {
-  font-size: 1.8em;
-  width: 100%;
-  font-weight: 700;
-  color: #fff000;
-  background: #141414;
-  padding: 0.3em 1em;
-  border-radius: 5px;
-  text-transform: capitalize;
-  box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445), inset -4px -4px 10px rgba(0, 0, 0, 0.667), 10px 10px 10px #000a;
-}
-body section a {
+body .hero a {
   display: inline-block;
   text-decoration: none;
+  text-transform: capitalize;
   cursor: pointer;
-  font-size: 1.2em;
+  font-size: 1rem;
+  background: linear-gradient(0deg, #ccbe00, #fff000);
   color: #000;
-  padding: 0.4em 1em;
+  padding: 0.5rem 1em;
   margin: 5vh auto;
   font-weight: 600;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #000a, inset -3px -3px 5px #000, inset 4px 4px 5px #ddda;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.25);
   transition: 0.2s ease;
 }
-body section a:hover {
+body .hero a:hover {
   transition: 0.2s ease;
   transform: scale(0.97);
-  box-shadow: 0 0 10px #000a, inset -2px -2px 5px #000, inset 2px 2px 5px #ddda;
+  background: #000;
+  color: #fff000;
 }
 @media (max-width: 500px) {
-  body section h2 {
-    font-size: 1.4em;
+  body .hero h2 {
+    font-size: 1.5rem;
     padding: 0.5em 0.5em;
     width: 100%;
   }
-  body section a {
-    font-size: 1em;
+  body .hero a {
+    font-size: 1rem;
   }
 }
 body main {
