--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,31 +14,52 @@ body {
     header {
         @media (max-width: 768px) {
             height: 30vh;
+            display: grid;
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            place-items: center;
         }
         background-color: #161616;
         width: 100%;
         text-align: center;
-        padding: 3em 5vw;
-
+        padding: 1rem 5vw;
+        height: 30vh;
         h1 {
             color: #fff000;
             text-transform: capitalize;
             letter-spacing: .1em;
-            font-size: 4em;
+            font-size: 3rem;
             font-weight: 800;
             padding: .1em;
             width: 100%;
+            // border: 1px solid red;
             border-radius: 5px;
-            box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445),
-                        inset -4px -4px 20px rgba(46, 46, 46, 0.667);
-
             @media(max-width: 768px){
-                font-size: 2.5em;
+                font-size: 1.8rem;
+                width: 100%;
             }
+        }
+        h2 {
+            margin: 1em auto;
+            padding: 1rem;
+            font-size: 1.5rem;
+            width: max-content;
+            width: 20rem;
+            font-weight: 700;
+            color: #000;
+            background: #fff000;
+            padding: .5rem;
+            border-radius: .5rem;
+            text-transform: capitalize;
+            // box-shadow: inset 2px 2px 5px rgba(233, 231, 127, 0.445),
+            //             inset -2px -2px 5px rgba(0, 0, 0, 0.667),
+            //             5px 5px 5px rgba(0,0,0,.250);
         }
     }
 
-    section {
+        .hero {
         height: 70vh;
         width: 100vw;
         background-image: url(../img/js.png);
@@ -68,52 +89,40 @@ body {
         text-align: center;
 
 
-        h2 {
-            // margin: 1em 5vw;
-            font-size: 1.8em;
-            width: 100%;
-            font-weight: 700;
-            color: #fff000;
-            background: #141414;
-            padding: .3em 1em;
-            border-radius: 5px;
-            text-transform: capitalize;
-            box-shadow: inset 4px 4px 10px rgba(233, 231, 127, 0.445),
-                        inset -4px -4px 10px rgba(0, 0, 0, 0.667),
-                        10px 10px 10px #000a;
-        }
+        
 
         a {
             display: inline-block;
             text-decoration: none;
+            text-transform: capitalize;
             cursor: pointer;
-            font-size: 1.2em;
+            font-size: 1rem;
+            background: linear-gradient(0deg, hsl(56, 100%, 40%), #fff000);
             color: #000;
-            padding: .4em 1em;
+            padding: .5rem 1em;
             margin: 5vh auto;
             font-weight: 600;
-            border-radius: 5px;
-            box-shadow: 0 0 5px #000a,
-                        inset -3px -3px 5px #000,
-                        inset 4px 4px 5px #ddda; 
+            border-radius:.5rem;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.300),
+                        inset -2px -2px 2px rgba(0, 0, 0, .50),
+                        inset 2px 2px 2px rgba(255, 255, 255, 0.250); 
             transition: .2s ease;
 
             &:hover {
                 transition: .2s ease;
                 transform: scale(.97);
-                box-shadow: 0 0 10px #000a,
-                        inset -2px -2px 5px #000,
-                        inset 2px 2px 5px #ddda;
+                background: #000;
+                color: #fff000;
             }
         }
         @media (max-width: 500px) {
             h2 {
-                font-size: 1.4em;
+                font-size: 1.5rem;
                 padding: .5em .5em;
                 width: 100%;
             }
             a {
-                font-size: 1em;
+                font-size: 1rem;
             }
         }
     }
