--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;700;800&display=swap');
 
 
-$font-gruppo: 'Gruppo', cursive;
+$font-content: 'Prompt', sans-serif;
