--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,52 +8,61 @@
 
 body {
   background-color: #f4f4f4;
-  font-family: "Gruppo", cursive;
+  font-family: "Prompt", sans-serif;
   width: 100vw;
   overflow-x: hidden;
 }
 body header {
   background-color: #161616;
-  width: 100%;
   text-align: center;
-  padding: 1rem 5vw;
-  height: 30vh;
+  padding: 1rem;
+  width: 100%;
 }
 @media (max-width: 768px) {
   body header {
     height: 30vh;
     display: grid;
+    width: 100%;
     place-items: center;
   }
 }
-body header h1 {
+body header .title {
+  width: max-content;
+  margin: 0 auto;
+}
+body header .title h1 {
   color: #fff000;
   text-transform: capitalize;
   letter-spacing: 0.1em;
-  font-size: 3rem;
-  font-weight: 800;
+  font-size: 2.5rem;
+  font-weight: 600;
   padding: 0.1em;
   width: 100%;
   border-radius: 5px;
 }
 @media (max-width: 768px) {
-  body header h1 {
+  body header .title h1 {
     font-size: 1.8rem;
     width: 100%;
   }
 }
-body header h2 {
+body header .title h2 {
   margin: 1em auto;
   padding: 1rem;
   font-size: 1.5rem;
   width: max-content;
   width: 20rem;
-  font-weight: 700;
+  font-weight: 500;
   color: #000;
   background: #fff000;
   padding: 0.5rem;
   border-radius: 0.5rem;
   text-transform: capitalize;
+}
+@media (min-width: 768px) {
+  body header .title h2 {
+    width: 100%;
+  }
 }
 body .hero {
   height: 70vh;
@@ -80,7 +90,7 @@ body .hero a {
   color: #000;
   padding: 0.5rem 1em;
   margin: 5vh auto;
-  font-weight: 600;
+  font-weight: 500;
   border-radius: 0.5rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.25);
   transition: 0.2s ease;
@@ -130,13 +140,13 @@ body main article .project-item {
   overflow: hidden;
 }
 body main article .project-item h2 {
-  font-size: 1.6em;
+  font-size: 1.5rem;
+  font-weight: 500;
   text-align: center;
   padding: 0.4em;
   color: #141414;
   text-transform: capitalize;
   transition: 0.2s ease;
-  font-family: "Gruppo", cursive;
   z-index: 20;
   background: #fff000;
   width: 100%;
@@ -193,10 +203,10 @@ body main article .project-item:hover h2 {
 }
 body footer {
   padding: 5vh 0;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   color: #fff;
   background-color: #000;
-  font-weight: 500;
+  font-weight: 400;
   text-transform: capitalize;
   text-align: center;
 }
@@ -206,7 +216,7 @@ body footer a {
 }
 @media (max-width: 768px) {
   body footer {
-    font-size: 0.8em;
+    font-size: 1rem;
   }
 }
 
