--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,54 +8,58 @@
 }
 body {
     background-color: #f4f4f4;
-    font-family: $font-gruppo;
+    font-family: $font-content;
     width: 100vw;
     overflow-x: hidden;
     header {
         @media (max-width: 768px) {
             height: 30vh;
             display: grid;
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
+            width: 100%;
             place-items: center;
         }
         background-color: #161616;
-        width: 100%;
         text-align: center;
-        padding: 1rem 5vw;
-        height: 30vh;
-        h1 {
-            color: #fff000;
-            text-transform: capitalize;
-            letter-spacing: .1em;
-            font-size: 3rem;
-            font-weight: 800;
-            padding: .1em;
-            width: 100%;
-            // border: 1px solid red;
-            border-radius: 5px;
-            @media(max-width: 768px){
-                font-size: 1.8rem;
-                width: 100%;
-            }
-        }
-        h2 {
-            margin: 1em auto;
-            padding: 1rem;
-            font-size: 1.5rem;
+        padding: 1rem;
+        width: 100%;
+        // height: 30vh;
+        .title {
             width: max-content;
-            width: 20rem;
-            font-weight: 700;
-            color: #000;
-            background: #fff000;
-            padding: .5rem;
-            border-radius: .5rem;
-            text-transform: capitalize;
-            // box-shadow: inset 2px 2px 5px rgba(233, 231, 127, 0.445),
-            //             inset -2px -2px 5px rgba(0, 0, 0, 0.667),
-            //             5px 5px 5px rgba(0,0,0,.250);
+            margin: 0 auto;
+            h1 {
+                color: #fff000;
+                text-transform: capitalize;
+                letter-spacing: .1em;
+                font-size: 2.5rem;
+                font-weight: 600;
+                padding: .1em;
+                width: 100%;
+                // border: 1px solid red;
+                border-radius: 5px;
+
+                @media(max-width: 768px) {
+                    font-size: 1.8rem;
+                    width: 100%;
+                }
+            }
+
+            h2 {
+                margin: 1em auto;
+                padding: 1rem;
+                font-size: 1.5rem;
+                width: max-content;
+                width: 20rem;
+                font-weight: 500;
+                color: #000;
+                background: #fff000;
+                padding: .5rem;
+                border-radius: .5rem;
+                text-transform: capitalize;
+
+                @media (min-width: 768px) {
+                    width: 100%;
+                }
+            }
         }
     }
 
@@ -66,17 +70,6 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         background-position: bottom left;
-        // figure {
-        //     height: 50%;
-        //     width: 50%;
-        //     overflow: hidden;
-
-        //     img {
-        //         height: 100%;
-        //         width: 100%;
-
-        //     }
-        // }
         @media (min-width: 1025px){
         background-position: right;
         }
@@ -101,7 +94,7 @@ body {
             color: #000;
             padding: .5rem 1em;
             margin: 5vh auto;
-            font-weight: 600;
+            font-weight: 500;
             border-radius:.5rem;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.300),
                         inset -2px -2px 2px rgba(0, 0, 0, .50),
@@ -158,13 +151,13 @@ body {
                     @media(max-width: 768px){
                         font-size: 1.3em;
                     }
-                    font-size: 1.6em;
+                    font-size: 1.5rem;
+                    font-weight: 500;
                     text-align: center;
                     padding: .4em;
                     color: #141414;
                     text-transform: capitalize;
                     transition: .2s ease;
-                    font-family: 'Gruppo', cursive;
                     z-index: 20;
                     background: #fff000;
                     width: 100%;
@@ -232,10 +225,10 @@ body {
 
     footer {
         padding: 5vh 0;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         color: #fff;
         background-color: #000;
-        font-weight: 500;
+        font-weight: 400;
         text-transform: capitalize;
         text-align: center;
         a {
@@ -243,7 +236,7 @@ body {
             text-decoration: none;
         }
         @media (max-width: 768px) {
-            font-size: .8em;
+            font-size: 1rem;
         }
     }
 }
