--- a/css/style.css
+++ b/css/style.css
@@ -9,199 +9,84 @@
 body {
   background-color: #f4f4f4;
   font-family: "Prompt", sans-serif;
-  width: 100vw;
-  overflow-x: hidden;
 }
-body header {
-  background-color: #161616;
-  text-align: center;
-  padding: 1rem;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  body header {
-    height: 30vh;
-    display: grid;
-    width: 100%;
-    place-items: center;
-  }
-}
-body header .title {
-  width: max-content;
-  margin: 0 auto;
-}
-body header .title h1 {
-  color: #fff000;
-  text-transform: capitalize;
-  letter-spacing: 0.1em;
-  font-size: 2.5rem;
-  font-weight: 600;
-  padding: 0.1em;
-  width: 100%;
-  border-radius: 5px;
-}
-@media (max-width: 768px) {
-  body header .title h1 {
-    font-size: 1.8rem;
-    width: 100%;
-  }
-}
-body header .title h2 {
-  margin: 1em auto;
-  padding: 1rem;
-  font-size: 1.5rem;
-  width: max-content;
-  width: 20rem;
-  font-weight: 500;
-  color: #000;
-  background: linear-gradient(0deg, #ffd500, #fff000);
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  text-transform: capitalize;
-}
-@media (min-width: 768px) {
-  body header .title h2 {
-    width: 100%;
-  }
-}
-body .hero {
-  height: 70vh;
-  width: 100vw;
-  background-image: url(../img/js.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: bottom left;
-  background-color: #F7E018;
+
+.hero {
   padding: 5vh 5vw;
-  text-align: center;
-}
-@media (min-width: 1025px) {
-  body .hero {
-    background-position: right;
-  }
-}
-body .hero a {
-  display: inline-block;
-  text-decoration: none;
-  text-transform: capitalize;
-  cursor: pointer;
-  font-size: 1rem;
-  background: linear-gradient(0deg, #ccbe00, #fff000);
-  color: #000;
-  padding: 0.5rem 1em;
-  margin: 5vh auto;
-  font-weight: 500;
-  border-radius: 0.5rem;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), inset -2px -2px 2px rgba(0, 0, 0, 0.5), inset 2px 2px 2px rgba(255, 255, 255, 0.25);
-  transition: 0.2s ease;
-}
-body .hero a:hover {
-  transition: 0.2s ease;
-  transform: scale(0.97);
-  background: #000;
-  color: #fff000;
-}
-@media (max-width: 500px) {
-  body .hero h2 {
-    font-size: 1.5rem;
-    padding: 0.5em 0.5em;
-    width: 100%;
-  }
-  body .hero a {
-    font-size: 1rem;
-  }
-}
-body main {
-  background-color: #ddd;
-  padding: 4em 5vw;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  height: 70vh;
   display: grid;
-  align-items: center;
-  gap: 1.5em;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-body main article {
-  background-color: orange;
-  border-radius: 10px;
-  height: 350px;
+  place-items: center;
+  place-content: center;
   position: relative;
+  isolation: isolate;
 }
-body main article .project-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #fff000;
-  height: 100%;
-  border-radius: 10px;
-  border: 1px solid #000;
-  box-shadow: 0 0 10px #000a;
-  transition: 0.4s ease;
-  cursor: pointer;
-  overflow: hidden;
-}
-body main article .project-item h2 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  text-align: center;
-  padding: 0.4em;
-  color: #141414;
-  text-transform: capitalize;
-  transition: 0.2s ease;
-  z-index: 20;
-  background: #fff000;
-  width: 100%;
-  box-shadow: inset -3px -3px 5px #ddda, inset 3px 3px 5px #000a;
-}
-@media (max-width: 768px) {
-  body main article .project-item h2 {
-    font-size: 1.3em;
-  }
-}
-body main article .project-item a {
-  background-color: #ddd;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-}
-body main article .project-item a::after {
+.hero::after {
   position: absolute;
   content: "";
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(0deg, #ffee00a1, #000);
+  background: url("../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg");
+  mix-blend-mode: overlay;
+  z-index: -1;
 }
-body main article .project-item img {
+.hero h1 {
+  margin-bottom: 1rem;
+  color: yellow;
+}
+main {
+  background-color: #fafafa;
+  padding: 10vh 1rem;
+  display: grid;
+  align-items: center;
+  gap: 10vh;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+main .project-container {
+  border-radius: 10px;
+  position: relative;
+}
+main .project-container .project-item {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: 0.2s ease;
+  height: 500px;
+  background: #fff;
+  padding: 1rem 0;
+  text-align: center;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.5rem 0.5rem #0002;
 }
-body main article .project-item:hover {
-  transition: 0.4s ease;
-  transform: scale(1.04);
-  box-shadow: 5px 5px 5px #000;
+main .project-container .project-item h2 {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+  text-decoration: underline 2px solid yellow;
 }
-body main article .project-item:hover a::after {
-  transition: 0.5s ease;
-  opacity: 0;
-}
-body main article .project-item:hover img {
-  transition: 0.2s ease;
-  transform: scale(1.05);
-}
-body main article .project-item:hover h2 {
-  transition: 0.3s ease;
-  letter-spacing: 0.1em;
-  transform: translateY(0.5em);
-  margin-bottom: 1em;
+main .project-container .project-item a {
+  display: block;
+  margin: 1rem auto;
   background: #000;
-  color: #fff000;
-  box-shadow: inset -3px -3px 5px rgba(0, 0, 0, 0.356), inset 3px 3px 5px #ddda;
+  width: 10rem;
+  color: yellow;
+  padding: 0.65rem 1rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  border-radius: 0.25rem;
 }
-body footer {
+main .project-container .project-item img {
+  border: 1px solid #000;
+  width: 10rem;
+  width: 90%;
+  height: 300px;
+  margin: 0 auto;
+  object-fit: contain;
+  transition: 0.2s ease;
+  border-radius: 50%;
+  border-radius: 0.25rem;
+}
+
+footer {
   padding: 5vh 0;
   font-size: 1.5rem;
   color: #fff;
@@ -210,12 +95,12 @@ body footer {
   text-transform: capitalize;
   text-align: center;
 }
-body footer a {
+footer a {
   color: #fff000;
   text-decoration: none;
 }
 @media (max-width: 768px) {
-  body footer {
+  footer {
     font-size: 1rem;
   }
 }
