--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,12 +14,12 @@ body {
 .hero {
     // border: 2px solid red;
     padding: 15vh 5vw 5vh;
-    background: hsla(0, 0%, 0%, .8);
+    background: hsla(0, 0%, 0%, .9);
     color: #fff;
     height: 90vh;
-    // display: grid;
+    display: grid;
     // place-items: center;
-    // place-content: center;
+    place-content: center;
     position: relative;
     isolation: isolate;
     &::after {
@@ -29,20 +29,26 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
+        background: url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
         background: url('../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg');
         background-repeat: no-repeat;
         mix-blend-mode: overlay;
         background-size: cover;
+        background-position: center;
         z-index: -1;
         @media (min-width: 820px) {
+            background: url('https://images.unsplash.com/photo-1526253038957-bce54e05968e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
             background-attachment: fixed;
+            mix-blend-mode: darken;
+            background-size: cover;
+            background-position: center;
         }
     }
 
     h1 {
         margin-bottom: 1rem;
         color: yellow;
-        font-size: 3rem;
+        // font-size: 3rem;
     }
 
     h2 {
@@ -52,13 +58,18 @@ body {
 
 main {
     // border: 2px solid red;
-    background-color: #fafafa;
-    padding: 10vh 1rem;
+    background-color: hsl(0, 0%, 30%);
+    background-color: hsla(0, 0%, 5%);
+    padding: 10vh 5vw;
     display: grid;
     align-items: center;
     gap: 10vh;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-
+    @media (min-width: 768px) {
+        // gap: 2rem;
+        column-gap: 5vw;
+        row-gap: 10vh;
+    }
     .project-container {
         // background-color: orange;
         // border: 2px solid blue;
@@ -69,43 +80,69 @@ main {
         .project-item {
             // border: 3px solid red;
             width: 100%;
-            height: 500px;
-            background: #fff;
-            padding: 1rem 0;
-            text-align: center;
+            height: auto;
+            background: hsl(0, 0%, 20%);
+            padding: 1rem;
+            // text-align: center;
             border-radius: .25rem;
-            box-shadow: 0 .5rem .5rem #0002;
-
+            // box-shadow: 0 .5rem .5rem #0004;
+            box-shadow: 0 .5rem .65rem hsla(60, 100%, 50%, .05);
+            @media (min-width: 768px) {
+                height: 400px;
+            }
             h2 {
                 text-transform: capitalize;
-                margin-bottom: 1rem;
-                text-decoration: underline 2px solid yellow;
+                // margin-bottom: 1rem;
+                color: yellow;
+                margin: 1rem 0;
+                font-size: 1.25rem;
+                font-size: clamp(1.25rem, 2vw, 1.25rem);
+                // text-decoration: underline 2px solid yellow;
             }
 
             a {
-                display: block;
-                margin: 1rem auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 1rem 0;
                 background: #000;
-                width: 10rem;
-                color: yellow;
+                background: linear-gradient(0deg, #000, #222);
+                width: 11rem;
+                color: #ffff;
                 padding: .65rem 1rem;
                 text-transform: capitalize;
                 text-decoration: none;
                 border-radius: .25rem;
+
+                i {
+                    color: yellow;
+                }
             }
 
             img {
-                border: 1px solid #000;
-                width: 10rem;
-                width: 90%;
-                height: 300px;
-                margin: 0 auto;
+                border: 1px solid hsl(56, 100%, 80%);
+                width: 100%;
+                height: 200px;
+                height: 100%;
+                object-fit: cover;
                 object-fit: contain;
                 transition: .2s ease;
                 border-radius: 50%;
                 border-radius: .25rem;
+                transition: .5s;
+                @media (min-width: 768px) {
+                    object-fit: cover;
+                    width: 100%;
+                    height: 60%;
+                    object-position: top;
+                }
             }
 
+            // &:hover {
+            //     img {
+            //         height: 300px;
+            //     }
+            // }
         }
     }
 }
